# metlibs-coserver

./: .gitignore  CMakeLists.txt  LGPLHEAD  Makefile.am  README.md  configure.ac  coserver.pc.in  metlibs-coserver.pc.in
debian/: changelog  control  metlibs-coserver-qt5-dev.install  rules
src/: CMakeLists.txt  ClientButton.cc  ClientButton.h  ClientSelection.cc  ClientSelection.h  CoClient.cc  CoClient.h  Makefile.am  QLetterCommands.cc  QLetterCommands.h  coserverVersion.h  miMessage.cc  miMessage.h  miMessageIO.cc  miMessageIO.h
